<?xml version="1.0"?>
<package format="2">
  <name>mars_common</name>
  <version>1.0.0</version>
  <description>The mars_common package</description>
  <maintainer email="marc@todo.todo">marc</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>mars_common_msgs</depend>
  <depend>mars_topology_msgs</depend>

</package>
