<?xml version="1.0"?>
<package format="2">
  <name>mars_agent_physical_common</name>
  <version>0.0.0</version>
  <description>The mars_agent_physical_common package</description>
  <maintainer email="dennis.luensch@iml.fraunhofer.de">marc</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>mars_common</depend>
  <depend>geometry_msgs</depend>
  <depend>mars_agent_physical_robot_msgs</depend>
  <depend>mars_topology_common</depend>

</package>
