<?xml version="1.0"?>
<package format="2">
  <name>mars_agent_physical_robot_msgs</name>
  <version>0.0.0</version>
  <description>The mars_agent_robot_msgs stores the needed msg files which are needed by
    the mars project.</description>

    <maintainer email="dennis.luensch@iml.fraunhofer.de">Dennis Luensch</maintainer>

  <license>TODO</license>

  <author email="dennis.luensch@iml.fraunhofer.de">Dennis Luensch</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>industrial_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mars_common_msgs</depend>

</package>
