<?xml version="1.0"?>
<package format="2">
  <name>mars_routing_core</name>
  <version>0.0.0</version>
  <description>The mars_routing_core package, which contains the base class for used plugins</description>


  <maintainer email="marc.hantzsch@iml.fraunhofer.de">Marc Hantzsch</maintainer>

  <author email="marc.hantzsch@iml.fraunhofer.de">Marc Hantzsch</author>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>eigen_conversions</depend>
  <depend>mars_common</depend>
  <depend>mars_routing_common</depend>
  <depend>mars_routing_srvs</depend>
  <depend>mars_topology_msgs</depend>
  <depend>mars_common_msgs</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

</package>
