<?xml version="1.0"?>
<package format="2">
  <name>mars_routing_plugin_carp</name>
  <version>0.0.0</version>
  <description>The router_plugin_carp package</description>

<maintainer email="marc.hantzsch@iml.fraunhofer.de">Marc Hantzsch</maintainer>

<license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>mars_routing_common</depend>
  <depend>mars_routing_core</depend>
  <depend>mars_routing_srvs</depend>
  <depend>mars_agent_physical_common</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
      <mars_routing_core plugin="${prefix}/carpPlugin.xml" />
  </export>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>mars_topology_edge</test_depend>
  <test_depend>mars_topology_vertex</test_depend>
</package>
