<?xml version="1.0"?>
<package format="2">
  <name>mars_routing_srvs</name>
  <version>0.1.0</version>
  <description>The mars_routing_srvs package</description>

  <maintainer email="dennis.luensch@iml.fraunhofer.de">Dennis Luensch</maintainer>

  <license>TODO</license>

  <author email="dennis.luensch@iml.fraunhofer.de">Dennis Luensch</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>mars_common_msgs</depend>
  <depend>mars_routing_msgs</depend>
  <depend>mars_topology_msgs</depend>
  <depend>mars_agent_physical_robot_msgs</depend>
</package>
