<?xml version="1.0"?>
<package format="2">
  <name>mars_topology_common</name>
  <version>0.0.0</version>
  <description>The mars_topology_common package</description>

  <maintainer email="dennis.luensch@iml.fraunhofer.de">Dennis Luensch</maintainer>

  <license>TODO</license>

  <author email="dennis.luensch@iml.fraunhofer.de">Dennis Luensch</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mars_common</depend>
  <depend>mars_common_msgs</depend>
  <depend>mars_topology_msgs</depend>
  <depend>mars_agent_physical_robot_msgs</depend>
  <depend>mars_topology_srvs</depend>
  <depend>mars_topology_actions</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>interactive_markers</depend>

  
  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
</package>
